// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render left/right slot and match snapshot 1`] = `
<div class="ghb-nav-bar ghb-hairline--bottom">
  <div class="ghb-nav-bar__content">
    <div class="ghb-nav-bar__left">Custom Left</div>
    <div class="ghb-nav-bar__title ghb-ellipsis"></div>
    <div class="ghb-nav-bar__right">Custom Right</div>
  </div>
</div>
`;

exports[`should render placeholder element when using placeholder prop 1`] = `
<div class="ghb-nav-bar__placeholder" style="height: 50px;">
  <div class="ghb-nav-bar ghb-nav-bar--fixed ghb-hairline--bottom">
    <div class="ghb-nav-bar__content">
      <div class="ghb-nav-bar__title ghb-ellipsis"></div>
    </div>
  </div>
</div>
`;

exports[`should render title slot and match snapshot 1`] = `
<div class="ghb-nav-bar ghb-hairline--bottom">
  <div class="ghb-nav-bar__content">
    <div class="ghb-nav-bar__title ghb-ellipsis">Custom Title</div>
  </div>
</div>
`;
